--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,9 @@ edition = "2018"
 [lib]
 crate-type = ["cdylib"]
 
+[profile.release]
+lto = true
+
 [dependencies]
 wasm-bindgen = "0.2.68"
+web-sys = { version = "0.3.45", features = ['console'] }
