--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,18 @@ crate-type = ["cdylib"]
 lto = true
 
 [dependencies]
+js-sys = "0.3.45"
 wasm-bindgen = "0.2.68"
-web-sys = { version = "0.3.45", features = ['console'] }
+
+[dependencies.web-sys]
+version = "0.3.45"
+features = [
+  'Document',
+  'Element',
+  'HtmlCanvasElement',
+  'WebGlBuffer',
+  'WebGlRenderingContext',
+  'WebGlProgram',
+  'WebGlShader',
+  'Window',
+]
