--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ wasm-bindgen = "0.2.68"
 [dependencies.web-sys]
 version = "0.3.45"
 features = [
+  'console',
   'Document',
   'Element',
   'HtmlCanvasElement',
